==================================
Change log for gocept.pseudonymize
==================================

0.3 (unreleased)
================

- Fix tests in documentation + testing documentation now.


0.2 (2013-09-06)
================

- ``.date`` does not return pseudonymized years smaller than `1900` anymore as
  ``datetime.date`` can not handle years smaller that `1900`.


0.1 (2013-09-05)
================

initial release