@@ -1,11 +1,14 @@
 from gocept.pseudonymize.pseudonymize import (
     date,
+    day,
     decimal,
     email,
     iban,
     integer,
     license_tag,
+    month,
     phone,
     text,
     time,
+    year,
     )
